[gd_scene load_steps=15 format=3 uid="uid://cfnlgefdgcrs3"]

[ext_resource type="Script" uid="uid://c7b5f0lsmivgx" path="res://components/money_meter.gd" id="1_57elt"]
[ext_resource type="Texture2D" uid="uid://byi56orrign7m" path="res://sprites/money_label.png" id="1_te7ke"]
[ext_resource type="Texture2D" uid="uid://cn6nqp74duu6q" path="res://sprites/num1.png" id="2_76iux"]
[ext_resource type="Texture2D" uid="uid://dgm6mxbsaplku" path="res://sprites/null_digit.png" id="3_1ue2o"]
[ext_resource type="Texture2D" uid="uid://mmgdxhvjffud" path="res://sprites/num2.png" id="3_3cw0d"]
[ext_resource type="Texture2D" uid="uid://cpx32kpmrfcov" path="res://sprites/num0.png" id="3_007iy"]
[ext_resource type="Texture2D" uid="uid://binpecfwik3ji" path="res://sprites/num3.png" id="4_57elt"]
[ext_resource type="Texture2D" uid="uid://bq4bbj7gjudud" path="res://sprites/num4.png" id="5_1ue2o"]
[ext_resource type="Texture2D" uid="uid://ctyktknbbe3jt" path="res://sprites/num5.png" id="6_007iy"]
[ext_resource type="Texture2D" uid="uid://bx50aqogqvvjg" path="res://sprites/num6.png" id="7_ctow4"]
[ext_resource type="Texture2D" uid="uid://88sj41v71jb" path="res://sprites/num7.png" id="8_7hv1a"]
[ext_resource type="Texture2D" uid="uid://bmler41lapjay" path="res://sprites/num8.png" id="9_fte8b"]
[ext_resource type="Texture2D" uid="uid://dkdaoi6wuh32r" path="res://sprites/num9.png" id="10_vv1pt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f4f5w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_007iy")
}, {
"duration": 1.0,
"texture": ExtResource("2_76iux")
}, {
"duration": 1.0,
"texture": ExtResource("3_3cw0d")
}, {
"duration": 1.0,
"texture": ExtResource("4_57elt")
}, {
"duration": 1.0,
"texture": ExtResource("5_1ue2o")
}, {
"duration": 1.0,
"texture": ExtResource("6_007iy")
}, {
"duration": 1.0,
"texture": ExtResource("7_ctow4")
}, {
"duration": 1.0,
"texture": ExtResource("8_7hv1a")
}, {
"duration": 1.0,
"texture": ExtResource("9_fte8b")
}, {
"duration": 1.0,
"texture": ExtResource("10_vv1pt")
}, {
"duration": 1.0,
"texture": ExtResource("3_1ue2o")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="MoneyMeter" type="Control" groups=["money_meter"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57elt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_te7ke")

[node name="digit1" type="AnimatedSprite2D" parent="."]
position = Vector2(570, 254)
sprite_frames = SubResource("SpriteFrames_f4f5w")

[node name="digit2" type="AnimatedSprite2D" parent="."]
position = Vector2(696, 254)
sprite_frames = SubResource("SpriteFrames_f4f5w")

[node name="digit3" type="AnimatedSprite2D" parent="."]
position = Vector2(822, 254)
sprite_frames = SubResource("SpriteFrames_f4f5w")

[node name="digit4" type="AnimatedSprite2D" parent="."]
position = Vector2(948, 254)
sprite_frames = SubResource("SpriteFrames_f4f5w")

[node name="digit5" type="AnimatedSprite2D" parent="."]
position = Vector2(1074, 254)
sprite_frames = SubResource("SpriteFrames_f4f5w")
